--- a/addons/meross_local_broker/addon_web_ui/angular.json
+++ b/addons/meross_local_broker/addon_web_ui/angular.json
@@ -23,15 +23,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": [
-              "src/favicon.ico",
-              "src/apple-touch-icon.png",
-              "src/robots.txt",
-              "src/assets"
-            ],
-            "styles": [
-              "src/main.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/apple-touch-icon.png", "src/robots.txt", "src/assets"],
+            "styles": ["src/main.scss"],
             "scripts": []
           },
           "configurations": {
@@ -95,15 +88,8 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "scripts": [],
-            "styles": [
-              "src/main.scss"
-            ],
-            "assets": [
-              "src/favicon.ico",
-              "src/apple-touch-icon.png",
-              "src/robots.txt",
-              "src/assets"
-            ]
+            "styles": ["src/main.scss"],
+            "assets": ["src/favicon.ico", "src/apple-touch-icon.png", "src/robots.txt", "src/assets"]
           },
           "configurations": {
             "ci": {
@@ -115,14 +101,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["tsconfig.app.json", "tsconfig.spec.json", "e2e/tsconfig.json"],
+            "exclude": ["**/node_modules/**"]
           }
         },
         "e2e": {
@@ -140,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "meross-local-broker"
+  "defaultProject": "meross-local-broker",
+  "cli": {
+    "analytics": false
+  }
 }
