--- a/addons/meross_local_broker/rootfs/etc/mosquitto/mosquitto.conf
+++ b/addons/meross_local_broker/rootfs/etc/mosquitto/mosquitto.conf
@@ -8,28 +8,26 @@ certfile /data/mqtt/certs/server.crt
 keyfile /data/mqtt/certs/server.key
 
 connection_messages true
-log_type all
+log_timestamp true
+
+log_type error
+log_type warning
+log_type notice
+log_type information
+log_type debug
+log_type subscribe
+log_type unsubscribe
+log_type websockets
+#log_type all
 log_dest stdout
 
 allow_anonymous false
-
-## OLD AUTH_PLUGIN options
-#auth_plugin /usr/share/mosquitto/auth-plug.so
-## HTTP authentication: used for hw devices
-#auth_opt_backends http,files
-#auth_opt_http_ip 127.0.0.1
-#auth_opt_http_port 2002
-#auth_opt_http_getuser_uri /_devs_/auth
-#auth_opt_http_superuser_uri /_devs_/superuser
-#auth_opt_http_aclcheck_uri /_devs_/acl
-## FILES authentication: used for super-admins
-#auth_opt_password_file /etc/mosquitto/auth.pw
-#auth_opt_acl_file /etc/mosquitto/auth.acl
 
 # NEW GO_AUTH plugin options
 auth_plugin /usr/share/mosquitto/go-auth.so
 # HTTP authentication: used for hw devices
 auth_opt_backends http,files
+auth_opt_http_with_tls false
 auth_opt_http_host 127.0.0.1
 auth_opt_http_port 2002
 auth_opt_http_getuser_uri /_devs_/auth
