--- a/addons/meross_local_broker/rootfs/etc/mosquitto/mosquitto.conf
+++ b/addons/meross_local_broker/rootfs/etc/mosquitto/mosquitto.conf
@@ -19,7 +19,7 @@ log_type subscribe
 log_type unsubscribe
 log_type websockets
 #log_type all
-log_dest stdout
+log_dest file /var/log/mosquitto.log
 
 allow_anonymous false
 
