--- a/addons/meross_local_broker/rootfs/etc/mosquitto/mosquitto.conf
+++ b/addons/meross_local_broker/rootfs/etc/mosquitto/mosquitto.conf
@@ -13,13 +13,12 @@ log_timestamp true
 log_type error
 log_type warning
 log_type notice
-log_type information
-log_type debug
-log_type subscribe
-log_type unsubscribe
-log_type websockets
-#log_type all
-log_dest file /var/log/mosquitto.log
+#log_type information
+#log_type subscribe
+#log_type unsubscribe
+#log_type websockets
+log_timestamp_format %Y-%m-%dT %H:%M:%S
+log_dest file /var/log/mosquitto/mosquitto.log
 
 allow_anonymous false
 
@@ -31,11 +30,19 @@ auth_opt_http_with_tls false
 auth_opt_http_host 127.0.0.1
 auth_opt_http_port 2002
 auth_opt_http_getuser_uri /_devs_/auth
-auth_opt_http_superuser_uri /_devs_/superuser
+#auth_opt_http_superuser_uri /_devs_/superuser
 auth_opt_http_aclcheck_uri /_devs_/acl
 # FILES authentication: used for super-admins
 auth_opt_password_path /etc/mosquitto/auth.pw
 auth_opt_acl_path /etc/mosquitto/auth.acl
+
+# Disable superuser
+#auth_opt_disable_superuser true
+
+# Logging
+auth_opt_log_level info
+auth_opt_log_dest file
+auth_opt_log_file /var/log/mosquitto/auth.log
 
 plugin /usr/share/mosquitto/mosquitto_disconnections.so
 auth_opt_target_topic $SYS/client-disconnections
