--- a/local_mqtt_broker/mosquitto.conf
+++ b/local_mqtt_broker/mosquitto.conf
@@ -3,9 +3,11 @@ listener 2001 0.0.0.0
 require_certificate false
 use_identity_as_username false
 
-cafile ca.crt
-certfile server.crt
-keyfile server.key
+allow_anonymous true
+
+cafile ./ca.crt
+certfile ./server.crt
+keyfile ./server.key
 
 connection_messages true
 log_timestamp true
@@ -19,8 +21,6 @@ log_type unsubscribe
 log_type websockets
 log_timestamp_format %Y-%m-%dT %H:%M:%S
 #log_dest file mosquitto.log
-
-allow_anonymous false
 
 # NEW GO_AUTH plugin options
 auth_plugin ./go-auth.so
