--- a/addons/meross_local_broker/rootfs/etc/mosquitto/mosquitto.conf
+++ b/addons/meross_local_broker/rootfs/etc/mosquitto/mosquitto.conf
@@ -13,10 +13,10 @@ log_timestamp true
 log_type error
 log_type warning
 log_type notice
-#log_type information
-#log_type subscribe
-#log_type unsubscribe
-#log_type websockets
+log_type information
+log_type subscribe
+log_type unsubscribe
+log_type websockets
 log_timestamp_format %Y-%m-%dT %H:%M:%S
 log_dest file /var/log/mosquitto/mosquitto.log
 
