--- a/custom_components/meross_cloud/manifest.json
+++ b/custom_components/meross_cloud/manifest.json
@@ -7,5 +7,6 @@
   "requirements": ["meross-iot==0.4.1.1rc1"],
   "config_flow": true,
   "quality_scale": "platinum",
-  "version": "1.0.5"
+  "version": "1.0.5",
+  "zeroconf": ["_meross-api._tcp.local."]
 }
