Updated README Added wheel package to Dockerfile requirements Updated ERROR CODES enum

--- a/addons/meross_local_broker/Dockerfile
+++ b/addons/meross_local_broker/Dockerfile
@@ -52,6 +52,7 @@ RUN apt-get update \
     xsltproc \
     logrotate \
   \
+  && pip3 install wheel \
   && mkdir -p /tmp/go \
   && \
     if [ "${BUILD_ARCH}" = "armhf" ]; then \
